# projectM

./: CMakeLists.txt  README.md
devTree/: PM-GPIO-I2C1.dts  PM-GPIO-I2C2.dts  PM-GPIO-UART1.dts  PM-GPIO-UART2.dts  PM-GPIO-UART4.dts  PM-PWM-Test-00A0.dts  build.sh
docs/: overall_scheme.eps  overall_scheme.graphml
firmwarePIC/: dspic33fj128mc802_DC_Driver.c  dspic33fj128mc802_uart_tx_rx.c  pic18f458_i2c_setup.c  pic18f458_uart_tx.c
src/: CMakeLists.txt  armPWM.cpp  armPWM.h
